fixed xss scripts

--- a/templates/question.html
+++ b/templates/question.html
@@ -12,7 +12,7 @@
                 <br>{{message}}<br>
             {% endif %}
             <br>
-            <p id="title"><strong>{{ question.title |safe}}</strong></p>
+            <p id="title"><strong>{{ question.title}}</strong></p>
             <p id="info">
                 Asked {{ question.submission_time }} ago
                 <span class="tab"></span>
